--- a/client/src/app/model-manage/edit/edit.component.html
+++ b/client/src/app/model-manage/edit/edit.component.html
@@ -6,11 +6,11 @@
     <input matInput placeholder="Model's Image" [(ngModel)]="type.Image">
   </mat-form-field>
   <div class="actions">
-    <button [mat-dialog-close]="type" cdkFocusInitial mat-raised-button color="primary">
+    <button class="button" [mat-dialog-close]="type" cdkFocusInitial mat-raised-button color="primary">
       Submit
     </button>
     <span class="spacer"></span>
-    <button (click)="cancel()" mat-raised-button color="warn">  
+    <button class="button" (click)="cancel()" mat-raised-button color="warn">  
       Cancel
     </button>
   </div>
