--- a/client/src/app/model-manage/filter-bar/filter-bar.component.html
+++ b/client/src/app/model-manage/filter-bar/filter-bar.component.html
@@ -1,14 +1,17 @@
 <mat-toolbar class="mat-elevation-z1">
   <mat-icon>filter_list</mat-icon>
-  <mat-form-field>
-    <mat-select placeholder="Origin" [(value)]="filter.origins" multiple (selectionChange)="emitFilterRequest()">
-      <mat-option *ngFor="let origin of origins" [value]="origin">{{origin}}</mat-option>
-    </mat-select>
-  </mat-form-field>
-
   <mat-form-field class="search-input">
-    <input type="text" matInput placeholder="Search..." [(ngModel)]="filter.search" (ngModelChange)="filterUpdate.next($event)">
+    <input type="text" matInput placeholder="Search..." [(ngModel)]="filter.type" (ngModelChange)="emitFilterRequest()">
     <mat-icon matSuffix>search</mat-icon>
   </mat-form-field>
+
+  <div class="item">
+    <span class="form-title">
+      Minimun Production
+    </span>
+    <mat-slider min="1940" max="2020" step="1" thumbLabel="true" [(value)]="filter.production"
+      (change)="emitFilterRequest()">
+    </mat-slider>
+  </div>
 
 </mat-toolbar>
