fixed no resluts image

--- a/client/src/app/explore/explore.component.html
+++ b/client/src/app/explore/explore.component.html
@@ -163,7 +163,7 @@
 
 
 
-<div class="no-result" *ngIf="cars.length === 0">
+<div class="no-results" *ngIf="cars.length === 0">
   <img src="../../assets/no-result.png">
   <h2>
     Sorry, we didn't find what you seek...
